Added PyPI badge

--- a/template.html
+++ b/template.html
@@ -26,6 +26,11 @@
             <img src="https://readthedocs.org/projects/{{ package.name }}/badge/?version=latest">
           </a>
         </td>
+        <td>
+          <a href="https://pypi.python.org/pypi/{{ package.name }}">
+            <img src="https://pypip.in/v/{{ package.name }}/badge.png">
+          </a>
+        </td>
       </tr>
       {% endfor %}
     </table>
