--- a/template.html
+++ b/template.html
@@ -13,12 +13,12 @@
         </td>
         <td>
           <a href="https://travis-ci.org/{{ package.user }}/{{ package.name }}">
-            <img src="https://travis-ci.org/{{ package.user }}/{{ package.name }}.png?branch=master">
+            <img src="https://travis-ci.org/{{ package.user }}/{{ package.name }}.svg?branch=master">
           </a>
         </td>
         <td>
           <a href="https://coveralls.io/r/{{ package.user }}/{{ package.name }}?branch=master">
-            <img src="https://coveralls.io/repos/{{ package.user }}/{{ package.name }}/badge.png?branch=master">
+            <img src="https://coveralls.io/repos/{{ package.user }}/{{ package.name }}/badge.svg?branch=master">
           </a>
         </td>
         <td>
@@ -28,7 +28,7 @@
         </td>
         <td>
           <a href="https://pypi.python.org/pypi/{{ package.name }}">
-            <img src="https://pypip.in/v/{{ package.name }}/badge.png">
+            <img src="https://pypip.in/v/{{ package.name }}/badge.svg">
           </a>
         </td>
       </tr>
