--- a/template.html
+++ b/template.html
@@ -16,70 +16,82 @@
         <th>Coverage</th>
         <th>ReadTheDocs</th>
         <th>PyPI</th>
+        <th>Conda</th>
       </tr>
       {% for package in section.packages %}
       <tr>
         <td align='left'>
           <a href="http://github.com/{{ package.repo }}">{{ package.name }}</a>
         </td>
-        <td align='center'>
           {% if 'travis' in package.badges %}
-          <a href="https://travis-ci.org/{{ package.travis_project }}">
-            <img src="https://travis-ci.org/{{ package.travis_project }}.svg?branch=master">
-          </a>
+          <td align='left'>
+            <a href="https://travis-ci.org/{{ package.travis_project }}">
+              <img src="https://travis-ci.org/{{ package.travis_project }}.svg?branch=master">
+            </a>
+          </td>
           {% else %}
-          -
+          <td align='center'>-</td>
           {% endif %}
-        </td>
-        <td align='center'>
           {% if 'circleci' in package.badges %}
-          <a href="https://circleci.com/gh/{{ package.circleci_project }}">
-            <img src="https://circleci.com/gh/{{ package.circleci_project }}.svg?style=svg">
-          </a>
+          <td align='left'>
+            <a href="https://circleci.com/gh/{{ package.circleci_project }}">
+              <img src="https://circleci.com/gh/{{ package.circleci_project }}.svg?style=svg">
+            </a>
+          </td>
           {% else %}
-          -
+          <td align='center'>-</td>
           {% endif %}
-        </td>
-        <td align='center'>
           {% if 'appveyor' in package.badges %}
-          <a href="https://ci.appveyor.com/project/{{ package.appveyor_project }}?branch=master">
-            <img src="https://img.shields.io/appveyor/ci/{{ package.appveyor_project }}/master.svg">
-          </a>
+          <td align='left'>
+            <a href="https://ci.appveyor.com/project/{{ package.appveyor_project }}?branch=master">
+              <img src="https://img.shields.io/appveyor/ci/{{ package.appveyor_project }}/master.svg">
+            </a>
+          </td>
           {% else %}
-          -
+          <td align='center'>-</td>
           {% endif %}
-        </td>
-        <td align='center'>
           {% if 'coveralls' in package.badges %}
-          <a href="https://coveralls.io/r/{{ package.repo }}?branch=master">
-            <img src="https://coveralls.io/repos/{{ package.repo }}/badge.svg?branch=master">
-          </a>
+          <td align='left'>
+            <a href="https://coveralls.io/r/{{ package.repo }}?branch=master">
+              <img src="https://coveralls.io/repos/{{ package.repo }}/badge.svg?branch=master">
+            </a>
+          </td>
           {% elif 'codecov' in package.badges %}
-          <a href="https://codecov.io/gh/{{ package.repo }}?branch=master">
-            <img src="https://codecov.io/gh/{{ package.repo }}/branch/master/graph/badge.svg">
-          </a>
+          <td align='left'>
+            <a href="https://codecov.io/gh/{{ package.repo }}?branch=master">
+              <img src="https://codecov.io/gh/{{ package.repo }}/branch/master/graph/badge.svg">
+            </a>
+          </td>
           {% else %}
-          -
+          <td align='center'>-</td>
           {% endif %}
-        </td>
-        <td align='center'>
           {% if 'rtd' in package.badges %}
-          <a href="https://readthedocs.org/projects/{{ package.rtd_name }}/?badge=latest">
-            <img src="https://readthedocs.org/projects/{{ package.rtd_name }}/badge/?version=latest">
-          </a>
+          <td align='left'>
+            <a href="https://readthedocs.org/projects/{{ package.rtd_name }}/?badge=latest">
+              <img src="https://readthedocs.org/projects/{{ package.rtd_name }}/badge/?version=latest">
+            </a>
+          </td>
           {% else %}
-          -
+          <td align='center'>-</td>
           {% endif %}
-        </td>
-        <td align='center'>
           {% if 'pypi' in package.badges %}
-          <a href="https://pypi.python.org/pypi/{{ package.pypi_name }}">
-            <img src="https://pypip.in/v/{{ package.pypi_name }}/badge.svg">
-          </a>
+          <td align='left'>
+            <a href="https://pypi.python.org/pypi/{{ package.pypi_name }}">
+              <img src="https://pypip.in/v/{{ package.pypi_name }}/badge.svg">
+            </a>
+          </td>
           {% else %}
-          -
+          <td align='center'>-</td>
           {% endif %}
-        </td>
+          {% if 'conda' in package.badges %}
+          <td align='left'>
+            <a href="https://anaconda.org/{{ package.conda_project }}">
+              <img src="https://anaconda.org/{{ package.conda_project }}/badges/version.svg">
+            </a>
+          </td>
+          {% else %}
+          <td align='center'>-</td>
+          {% endif %}
       </tr>
       {% endfor %}
     </table>
