--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <div id="wrapper">
-    <h1>Astropy Project Dashboard</h1>
+    <h1>Intake Project Dashboard</h1>
     {% for section in config %}
     <h2>{{ section.name }}</h2>
     <table align='center'>
@@ -77,7 +77,7 @@
           {% if 'pypi' in package.badges %}
           <td align='left'>
             <a href="https://pypi.python.org/pypi/{{ package.pypi_name }}">
-              <img src="https://pypip.in/v/{{ package.pypi_name }}/badge.svg">
+              <img src="https://pypip.in/v/{{ package.pypi_name }}/badge.svg?colorB=cc77dd">
             </a>
           </td>
           {% else %}
@@ -85,8 +85,26 @@
           {% endif %}
           {% if 'conda' in package.badges %}
           <td align='left'>
-            <a href="https://anaconda.org/{{ package.conda_project }}">
-              <img src="https://anaconda.org/{{ package.conda_project }}/badges/version.svg">
+            <a href="https://anaconda.org/{{ package.conda_channel }}/{{ package.conda_package }}">
+              <img src="https://img.shields.io/conda/vn/{{ package.conda_channel }}/{{ package.conda_package }}.svg?colorB=4488ff&style=flat">
+            </a>
+          </td>
+          {% else %}
+          <td align='center'>-</td>
+          {% endif %}
+          {% if 'conda-forge' in package.badges %}
+          <td align='left'>
+            <a href="https://anaconda.org/conda-forge/{{ package.conda_package }}">
+              <img src="https://img.shields.io/conda/vn/conda-forge/{{ package.conda_package }}.svg?colorB=4488ff&style=flat">
+            </a>
+          </td>
+          {% else %}
+          <td align='center'>-</td>
+          {% endif %}
+          {% if 'defaults' in package.badges %}
+          <td align='left'>
+            <a href="https://anaconda.org/anaconda/{{ package.conda_package }}">
+              <img src="https://img.shields.io/conda/vn/anaconda/{{ package.conda_package }}.svg?colorB=4488ff&label=defaults&style=flat">
             </a>
           </td>
           {% else %}
