Fixing pypi image

--- a/template.html
+++ b/template.html
@@ -91,7 +91,7 @@
           {% if 'pypi' in package.badges %}
           <td align='left'>
             <a href="https://pypi.python.org/pypi/{{ package.pypi_name }}">
-              <img src="https://pypip.in/v/{{ package.pypi_name }}/badge.svg?colorB=cc77dd">
+              <img src="https://img.shields.io/pypi/v/{{ package.pypi_name }}.svg?color=cc77dd">
             </a>
           </td>
           {% else %}
