Updating to make travis work

--- a/tools/template.html
+++ b/tools/template.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    <link href='style.css' rel='stylesheet' type="text/css">
+    <link href='_static/tools.css' rel='stylesheet' type="text/css">
   </head>
   <body>
     <div id="wrapper">
-    <h1>PyViz Project Dashboard</h1>
+    <h1>PyViz Tools</h1>
     {% for section in config %}
     <h2>{{ section.name }}</h2>
     <table align='center'>
