--- a/tools/template.html
+++ b/tools/template.html
@@ -10,11 +10,13 @@
     <table align='center'>
       <tr>
         <th>Name</th>
-        <th>Travis</th>
-        <th>AppVeyor</th>
+        <th>Stars</th>
+        <th>Contributors</th>
+        <th>Downloads</th>
+        <th>License</th>
+        <th>CI</th>
         <th>Coverage</th>
         <th>Docs</th>
-        <th>Release</th>
         <th>PyPI</th>
         <th>Conda</th>
       </tr>
@@ -23,24 +25,45 @@
         <td align='left'>
           <a href="http://github.com/{{ package.repo }}">{{ package.name }}</a>
         </td>
-          {% if 'travis' in package.badges %}
-          <td align='left'>
-            <a href="https://travis-ci.org/{{ package.travis_project }}">
-              <img src="https://travis-ci.org/{{ package.travis_project }}.svg?branch=master">
-            </a>
-          </td>
+        <td align='left'>
+          <img src="https://img.shields.io/github/stars/{{ package.repo }}.svg?style=social">
+        </td>
+        <td align='left'>
+          <img src="https://img.shields.io/github/contributors/{{ package.repo }}.svg?style=social&logo=github">
+        </td>
+          {% if 'pypi' in package.badges %}
+            <td align='left'>
+              <img src="https://img.shields.io/pypi/dd/{{ package.pypi_name }}.svg?logo=pypi">
+            </td>
+            <td align='left'>
+              <img src="https://img.shields.io/pypi/l/{{ package.pypi_name }}.svg">
+            </td>
           {% else %}
-          <td align='center'>-</td>
+          <td align='center'>-</td><td align='center'>-</td>
+          {% endif %}
+        <td align='left'>
+          {% if 'travis' in package.badges %}
+            <a href="https://travis-ci.org/{{ package.travis_project }}">
+              <img src="https://img.shields.io/travis/{{ package.travis_project }}/master.svg?logo=travis-ci">
+            </a>
+          {% else %}
+          <p></p>
           {% endif %}
           {% if 'appveyor' in package.badges %}
-          <td align='left'>
             <a href="https://ci.appveyor.com/project/{{ package.appveyor_project }}?branch=master">
-              <img src="https://img.shields.io/appveyor/ci/{{ package.appveyor_project }}/master.svg">
+              <img src="https://img.shields.io/appveyor/ci/{{ package.appveyor_project }}/master.svg?logo=appveyor">
             </a>
-          </td>
           {% else %}
-          <td align='center'>-</td>
+          <p></p>
           {% endif %}
+          {% if 'circleci' in package.badges %}
+            <a href="https://circleci.com/gh/{{ package.circleci_project }}">
+              <img src="https://circleci.com/gh/{{ package.circleci_project }}.svg?style=svg">
+            </a>
+          {% else %}
+          <p></p>
+          {% endif %}
+        </td>
           {% if 'coveralls' in package.badges %}
           <td align='left'>
             <a href="https://coveralls.io/r/{{ package.repo }}?branch=master">
@@ -56,16 +79,11 @@
           {% else %}
           <td align='center'>-</td>
           {% endif %}
-          {% if 'gh-pages' in package.badges or 'site' in package.badges %}
+          {% if 'site' in package.badges %}
           <td align='left'>
             <a href="{{ package.site_protocol }}://{{ package.site }}">
               <img src="https://img.shields.io/website-up-down-green-red/{{ package.site_protocol }}/{{ package.site }}.svg">
             </a>
-            {% if 'gh-pages' in package.badges %}
-            <a href="https://github.com/{{ package.repo }}/tree/gh-pages">
-              <img src="https://img.shields.io/github/last-commit/{{ package.repo }}/gh-pages.svg">
-            </a>
-            {% endif %}
           </td>
           {% elif 'rtd' in package.badges %}
           <td align='left'>
@@ -76,22 +94,10 @@
           {% else %}
           <td align='center'>-</td>
           {% endif %}
-          {% if 'release' in package.badges %}
-          <td align='left'>
-            <a href="https://github.com/{{ package.repo }}/tags">
-              <img src="https://img.shields.io/github/tag/{{ package.repo }}.svg?label=dev-tag&colorB=11ccbb">
-            </a>
-            <a href="https://github.com/{{ package.repo }}/releases">
-              <img src="https://img.shields.io/github/release/{{ package.repo }}.svg?label=rel-tag&colorB=11ccbb">
-            </a>
-          </td>
-          {% else %}
-          <td align='center'>-</td>
-          {% endif %}
           {% if 'pypi' in package.badges %}
           <td align='left'>
             <a href="https://pypi.python.org/pypi/{{ package.pypi_name }}">
-              <img src="https://img.shields.io/pypi/v/{{ package.pypi_name }}.svg?color=cc77dd">
+              <img src="https://img.shields.io/pypi/v/{{ package.pypi_name }}.svg">
             </a>
           </td>
           {% else %}
@@ -100,25 +106,7 @@
           {% if 'conda' in package.badges %}
           <td align='left'>
             <a href="https://anaconda.org/{{ package.conda_channel }}/{{ package.conda_package }}">
-              <img src="https://img.shields.io/conda/vn/{{ package.conda_channel }}/{{ package.conda_package }}.svg?colorB=4488ff&style=flat">
-            </a>
-          </td>
-          {% else %}
-          <td align='center'>-</td>
-          {% endif %}
-          {% if 'conda-forge' in package.badges %}
-          <td align='left'>
-            <a href="https://anaconda.org/conda-forge/{{ package.conda_package }}">
-              <img src="https://img.shields.io/conda/vn/conda-forge/{{ package.conda_package }}.svg?colorB=4488ff&style=flat">
-            </a>
-          </td>
-          {% else %}
-          <td align='center'>-</td>
-          {% endif %}
-          {% if 'defaults' in package.badges %}
-          <td align='left'>
-            <a href="https://anaconda.org/anaconda/{{ package.conda_package }}">
-              <img src="https://img.shields.io/conda/vn/anaconda/{{ package.conda_package }}.svg?colorB=4488ff&label=defaults&style=flat">
+              <img src="https://img.shields.io/conda/vn/{{ package.conda_channel }}/{{ package.conda_package }}.svg?style=flat">
             </a>
           </td>
           {% else %}
