Reorganizing tools and fixing formatting

--- a/tools/template.html
+++ b/tools/template.html
@@ -1,7 +1,7 @@
     <div id="tools-wrapper">
     {% for section in config %}
     <h3>{{ section.name }}</h3>
-    <table align='center'>
+    <table>
       <tr>
         <th>Name</th>
         <th>Stars</th>
