--- a/tools/template.html
+++ b/tools/template.html
@@ -1,17 +1,17 @@
     <div id="tools-wrapper">
     {% for section in config %}
-    <h3>{{ section.name }}</h3>
-    <table align='center'>
+    <h3 id="{{ section.name.lower().replace(' ', '-') }}">{{ section.name }}</h3>
+    <table>
       <tr>
         <th>Name</th>
         <th>Stars</th>
         <th>Contributors</th>
         <th>Downloads</th>
         <th>License</th>
-        <th>Coverage</th>
         <th>Docs</th>
         <th>PyPI</th>
         <th>Conda</th>
+        <th>Sponsors</th>
       </tr>
       {% for package in section.packages %}
       <tr>
@@ -32,22 +32,7 @@
               <img src="https://img.shields.io/pypi/l/{{ package.pypi_name }}.svg">
             </td>
           {% else %}
-          <td align='center'>-</td><td align='center'>-</td>
-          {% endif %}
-          {% if 'coveralls' in package.badges %}
-          <td align='left'>
-            <a href="https://coveralls.io/r/{{ package.repo }}?branch=master">
-              <img src="https://coveralls.io/repos/{{ package.repo }}/badge.svg?branch=master">
-            </a>
-          </td>
-          {% elif 'codecov' in package.badges %}
-          <td align='left'>
-            <a href="https://codecov.io/gh/{{ package.repo }}?branch=master">
-              <img src="https://codecov.io/gh/{{ package.repo }}/branch/master/graph/badge.svg">
-            </a>
-          </td>
-          {% else %}
-          <td align='center'>-</td>
+          <td align='center' class='empty-cell'>-</td><td align='center' class='empty-cell'>-</td>
           {% endif %}
           {% if 'site' in package.badges %}
           <td align='left'>
@@ -62,7 +47,7 @@
             </a>
           </td>
           {% else %}
-          <td align='center'>-</td>
+          <td align='center' class='empty-cell'>-</td>
           {% endif %}
           {% if 'pypi' in package.badges %}
           <td align='left'>
@@ -71,7 +56,7 @@
             </a>
           </td>
           {% else %}
-          <td align='center'>-</td>
+          <td align='center' class='empty-cell'>-</td>
           {% endif %}
           {% if 'conda' in package.badges %}
           <td align='left'>
@@ -80,7 +65,26 @@
             </a>
           </td>
           {% else %}
-          <td align='center'>-</td>
+          <td align='center' class='empty-cell'>-</td>
+          {% endif %}
+                    {% if 'sponsor' in package.badges %}
+            <td align='left'>
+            {% for sponsor in package.sponsors %}
+              {% if sponsors.get(sponsor) %}
+                <a href="{{ sponsors[sponsor].get('url') }}">
+                {% if sponsors[sponsor].get('logo') %}
+                  <img class='sponsor-logo' src="{{ sponsors[sponsor]['logo'] }}">
+                {% else %}
+                  {{ sponsors[sponsor].get('label', sponsor) }}
+                {% endif %}
+                </a>
+              {% else %}
+                {{ sponsor }}
+              {% endif %}
+            {% endfor %}
+            </td>
+          {% else %}
+          <td align='center' class='empty-cell'>-</td>
           {% endif %}
       </tr>
       {% endfor %}
