Getting tools building [build:website_dev]

--- a/tools/template.html
+++ b/tools/template.html
@@ -43,7 +43,7 @@
           </td>
           {% elif 'rtd' in package.badges %}
           <td align='left'>
-            <a href="https://readthedocs.org/projects/{{ package.rtd_name }}/?badge=latest">
+            <a href="https://{{ package.rtd_name }}.readthedocs.io">
               <img src="https://readthedocs.org/projects/{{ package.rtd_name }}/badge/?version=latest">
             </a>
           </td>
